--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -12,12 +12,8 @@ body{
 }
 
 .wrapper{
-    padding: 1rem;
-    margin: 10px auto;
-}
-
-h1{ 
-    margin: 2rem 0px;
+    padding:1rem;
+    margin: 1rem auto;
 }
 
 h2{
